--- a/Week-02-Frontend/html.html
+++ b/Week-02-Frontend/html.html
@@ -4,54 +4,74 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Miniver&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Miniver&family=Open+Sans&display=swap" rel="stylesheet">
     <title>Biografi sederhana</title>
 </head>
 <body>
-    <!-- harus mengandung heading, paragraph, list, table, dan form -->
-    <!-- im sorry if any of the prepositions may wrong -->
-    <h1>My Biography</h1>
-    <p>Hellow, my name is fajrianwar fachrul, and you can call me fajri. I am 23 years old, graduated from vocational high school 7 in Semarang in 2017 after that work as Quality Control at Waskita Beton Precast for 2 years, and now  I live in Semarang. This web is for my task at eduwork. My expertise actually is civil engineering, but because some sort of unexpected changes I choose to get this course for better future in industry 4.0. <p>
-    <h2>My skills</h2>
-    <h3>Skills</h3>
-        <ul>
-            <li>Estimating building</li>
-            <li>Quality control</li>
-            <li>Surveying contour</li>
-            <li>Archive</li>
-            <li>Presentation</li>
-            <li>Mailing</li>
-            <li>Googling</li>
-        </ul>
-    <h3>Software</h3>
-        <ol>
-            <li>Microsoft Word</li>
-            <li>Microsoft Excel</li>
-            <li>Microsoft Power Point</li>
-            <li>AutoCAD 2D</li>
-            <li>SketchUP</li>
-            <li>Canva</li>
-            <li>SAP 2000</li>
-        </ol>
-    <h3>Social media</h3>
-    <table border="1px" cellpadding="3px">
-        <tr>
-            <th>Instagram</th>
-            <th>Linked In</th>
-            <th>Github</th>
-        </tr>
-        <tr>
-            <td>instagram.com/fajrianwarf</td>
-            <td>linkedin.com/in/fajrianwarf</td>
-            <td>github.com/fajrianwarf</td>
-        </tr>
-    </table>
-    <h3>Contact Me</h3>
-    <form>
-        <label for="email">Email</label><br>
-        <input type="email"><br>
-        <label for="message">Message</label><br>
-        <input type="text"><br><br>
-        <button type="submit">Submit</button>
-    </form>
+    <div class="container">
+        <div class="biography">
+            <h1>My Biography</h1>
+            <p id="bio">Hello, my name is fajrianwar fachrul, and you can call me fajri. I am 23 years old, graduated from vocational high school 7 Semarang in 2017. After that I work as Quality Control at Waskita Beton Precast for 2 years, and at this moment I'm living in Semarang. This web is for my task at eduwork. My expertise actually is civil engineering, but because some sort of unexpected changes I choose to get this course for better future in industry 4.0. <p>
+            <hr>
+        </div>
+        <div>
+            <h2>My skills</h2>            
+            <div class="skills">
+                <article id="skill-1">
+                    <h3 style="text-align: center;">Skills</h3>
+                    <ul>
+                        <li>Estimating building</li>
+                        <li>Quality control</li>
+                        <li>Surveying contour</li>
+                        <li>Archive</li>
+                        <li>Presentation</li>
+                        <li>Mailing</li>
+                        <li>Googling</li>
+                    </ul>
+                </article>
+                <article id="skill-2">
+                    <h3 style="text-align: center;">Software</h3>
+                    <ul>
+                        <li>Microsoft Word</li>
+                        <li>Microsoft Excel</li>
+                        <li>Microsoft Power Point</li>
+                        <li>AutoCAD 2D</li>
+                        <li>SketchUP</li>
+                        <li>Canva</li>
+                        <li>SAP 2000</li>
+                    </ul>
+                </article>
+            </div>
+        </div>
+        <hr>
+        <div class="social-media">
+            <h3>Social media</h3>
+            <table border="1px" cellpadding="8px">
+                <tr>
+                    <th>Instagram</th>
+                    <th>Linked In</th>
+                    <th>Github</th>
+                </tr>
+                <tr>
+                    <td><a href="instagram.com/fajrianwarf">@fajrianwarf</a></td>
+                    <td><a href="linkedin.com/in/fajrianwarf">@fajrianwarf</a></td>
+                    <td><a href="github.com/fajrianwarf">@fajrianwarf</a></td>
+                </tr>
+            </table>
+        </div>
+        <hr>
+        <div class="contact-me">
+            <h3>Contact Me</h3>
+            <form>
+                <label for="email">Email</label><br>
+                <input type="email"><br>
+                <label for="message">Message</label><br>
+                <input type="text"><br><br>
+                <button type="submit">Submit</button>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
