--- a/Week-02-Frontend/html.html
+++ b/Week-02-Frontend/html.html
@@ -5,23 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Miniver&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Miniver&family=Open+Sans&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Biografi sederhana</title>
 </head>
 <body>
-    <div class="container">
-        <div class="biography">
-            <h1>My Biography</h1>
+    <div class="container col-lg-8">
+        <div class="biography text-center">
+            <h1 class="display-1 mb-3">My Biography</h1>
             <p id="bio">Hello, my name is fajrianwar fachrul, and you can call me fajri. I am 23 years old, graduated from vocational high school 7 Semarang in 2017. After that I work as Quality Control at Waskita Beton Precast for 2 years, and at this moment I'm living in Semarang. This web is for my task at eduwork. My expertise actually is civil engineering, but because some sort of unexpected changes I choose to get this course for better future in industry 4.0. <p>
-            <hr>
         </div>
-        <div>
-            <h2>My skills</h2>            
-            <div class="skills">
-                <article id="skill-1">
-                    <h3 style="text-align: center;">Skills</h3>
-                    <ul>
+
+        <hr>
+
+        <div class="skills text-center">
+            <h3>My skills</h3>            
+            <div class="row">
+                <article class="col-6">
+                    <h4>Skills</h4>
+                    <ul class="list-unstyled">
                         <li>Estimating building</li>
                         <li>Quality control</li>
                         <li>Surveying contour</li>
@@ -31,9 +33,9 @@
                         <li>Googling</li>
                     </ul>
                 </article>
-                <article id="skill-2">
-                    <h3 style="text-align: center;">Software</h3>
-                    <ul>
+                <article class="col-6">
+                    <h4>Software</h4>
+                    <ul class="list-unstyled">
                         <li>Microsoft Word</li>
                         <li>Microsoft Excel</li>
                         <li>Microsoft Power Point</li>
@@ -45,32 +47,58 @@
                 </article>
             </div>
         </div>
+
         <hr>
-        <div class="social-media">
+        
+        <div class="container col-6 text-center">
             <h3>Social media</h3>
-            <table border="1px" cellpadding="8px">
-                <tr>
-                    <th>Instagram</th>
-                    <th>Linked In</th>
-                    <th>Github</th>
-                </tr>
-                <tr>
-                    <td><a href="instagram.com/fajrianwarf">@fajrianwarf</a></td>
-                    <td><a href="linkedin.com/in/fajrianwarf">@fajrianwarf</a></td>
-                    <td><a href="github.com/fajrianwarf">@fajrianwarf</a></td>
-                </tr>
+            <table class="table table-striped table-info table-hover">
+                <thead>
+                    <tr>
+                        <th scope="col">Instagram</th>
+                        <th scope="col">Linked In</th>
+                        <th scope="col">Github</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td><a href="instagram.com/fajrianwarf">@fajrianwarf</a></td>
+                        <td><a href="linkedin.com/in/fajrianwarf">@fajrianwarf</a></td>
+                        <td><a href="github.com/fajrianwarf">@fajrianwarf</a></td>
+                    </tr>
+                </tbody>
             </table>
         </div>
+
         <hr>
-        <div class="contact-me">
-            <h3>Contact Me</h3>
-            <form>
-                <label for="email">Email</label><br>
-                <input type="email"><br>
-                <label for="message">Message</label><br>
-                <input type="text"><br><br>
-                <button type="submit">Submit</button>
+
+        <div class="container col-lg-6">
+            <h3 class="text-center mb-3">Contact Me</h3>
+            <label for="message" class="form-label">Your contact</label>
+            <form class="form-floating mb-3">
+                <input type="email" class="form-control" placeholder="input your email in here">
+                <label for="email" class="form-label">(eg. email, phone number)</label>
             </form>
+            <div class="mb-3">
+                <label for="message" class="form-label">Message</label>
+                <textarea class="form-control" rows="3" placeholder="place your message in here"></textarea>
+            </div>
+            <div class="d-grid">
+                <button class="btn btn-primary mb-3" type="submit">Submit</button>
+            </div>
+        </div>
+
+        <hr>
+        
+        <div class="quote text-center">
+            <figure>
+                <blockquote class="blockquote">
+                    <p>It's rather easy to know, than to realize</p>
+                </blockquote>
+                <figcaption>
+                    <cite title="Source Title">- fajrianwar fachrul</cite>
+                </figcaption>
+            </figure>
         </div>
     </div>
 </body>
